--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "TNM\\Utilities\\LogPurger\\LogPurgerServiceProvider\\"
+                "TNM\\Utilities\\LogPurger\\LogPurgerServiceProvider"
             ]
         }
     },
